--- a/ffigen_codelab/codelab_rebuild.yaml
+++ b/ffigen_codelab/codelab_rebuild.yaml
@@ -162,27 +162,27 @@ steps:
           // Copyright 2022 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:ffigen_app/ffigen_app.dart';
           import 'package:flutter/material.dart';
-          
+
           const String jsCode = '1+2';
-          
+
           void main() {
             runApp(const MyApp());
           }
-          
+
           class MyApp extends StatefulWidget {
             const MyApp({super.key});
-          
+
             @override
             State<MyApp> createState() => _MyAppState();
           }
-          
+
           class _MyAppState extends State<MyApp> {
             late Duktape duktape;
             String output = '';
-          
+
             @override
             void initState() {
               super.initState();
@@ -191,33 +191,27 @@ steps:
                 output = 'Initialized Duktape';
               });
             }
-          
+
             @override
             void dispose() {
               duktape.dispose();
               super.dispose();
             }
-          
+
             @override
             Widget build(BuildContext context) {
               const textStyle = TextStyle(fontSize: 25);
               const spacerSmall = SizedBox(height: 10);
               return MaterialApp(
                 home: Scaffold(
-                  appBar: AppBar(
-                    title: const Text('Duktape Test'),
-                  ),
+                  appBar: AppBar(title: const Text('Duktape Test')),
                   body: Center(
                     child: Container(
                       padding: const EdgeInsets.all(10),
                       child: Column(
                         mainAxisSize: MainAxisSize.min,
                         children: [
-                          Text(
-                            output,
-                            style: textStyle,
-                            textAlign: TextAlign.center,
-                          ),
+                          Text(output, style: textStyle, textAlign: TextAlign.center),
                           spacerSmall,
                           ElevatedButton(
                             child: const Text('Run JavaScript'),
@@ -242,15 +236,15 @@ steps:
           // Copyright 2022 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'dart:ffi';
           import 'dart:io' show Platform;
           import 'package:ffi/ffi.dart' as ffi;
-          
+
           import 'duktape_bindings_generated.dart';
-          
+
           const String _libName = 'ffigen_app';
-          
+
           /// The dynamic library in which the symbols for [DuktapeBindings] can be found.
           final DynamicLibrary _dylib = () {
             if (Platform.isMacOS || Platform.isIOS) {
@@ -264,44 +258,50 @@ steps:
             }
             throw UnsupportedError('Unknown platform: ${Platform.operatingSystem}');
           }();
-          
+
           /// The bindings to the native functions in [_dylib].
           final DuktapeBindings _bindings = DuktapeBindings(_dylib);
-          
+
           class Duktape {
             Duktape() {
-              ctx =
-                  _bindings.duk_create_heap(nullptr, nullptr, nullptr, nullptr, nullptr);
+              ctx = _bindings.duk_create_heap(
+                nullptr,
+                nullptr,
+                nullptr,
+                nullptr,
+                nullptr,
+              );
             }
-          
+
             void evalString(String jsCode) {
               // From duktape.h:
               // #define duk_peval_string(ctx,src)  \
               // 	(duk_eval_raw((ctx), (src), 0, 0 /*args*/ | DUK_COMPILE_EVAL | DUK_COMPILE_SAFE | DUK_COMPILE_NOSOURCE | DUK_COMPILE_STRLEN | DUK_COMPILE_NOFILENAME))
-          
+
               var nativeUtf8 = jsCode.toNativeUtf8();
               _bindings.duk_eval_raw(
-                  ctx,
-                  nativeUtf8.cast<Char>(),
-                  0,
-                  0 /*args*/ |
-                      DUK_COMPILE_EVAL |
-                      DUK_COMPILE_SAFE |
-                      DUK_COMPILE_NOSOURCE |
-                      DUK_COMPILE_STRLEN |
-                      DUK_COMPILE_NOFILENAME);
+                ctx,
+                nativeUtf8.cast<Char>(),
+                0,
+                0 /*args*/ |
+                    DUK_COMPILE_EVAL |
+                    DUK_COMPILE_SAFE |
+                    DUK_COMPILE_NOSOURCE |
+                    DUK_COMPILE_STRLEN |
+                    DUK_COMPILE_NOFILENAME,
+              );
               ffi.malloc.free(nativeUtf8);
             }
-          
+
             int getInt(int index) {
               return _bindings.duk_get_int(ctx, index);
             }
-          
+
             void dispose() {
               _bindings.duk_destroy_heap(ctx);
               ctx = nullptr;
             }
-          
+
             late Pointer<duk_hthread> ctx;
           }
       - name: Patch src/CMakeLists.txt
@@ -355,6 +355,9 @@ steps:
       - name: Run ffigen
         path: ffigen_app
         dart: run ffigen --config ffigen.yaml
+      - name: format duktape bindings
+        path: ffigen_app
+        dart: format lib/duktape_bindings_generated.dart
       - name: dart analyze
         path: ffigen_app
         dart: analyze --fatal-infos
@@ -447,38 +450,46 @@ steps:
            
            import 'duktape_bindings_generated.dart';
            
-          @@ -13,12 +14,29 @@ const String _libName = 'ffigen_app';
+          @@ -13,12 +14,37 @@ const String _libName = 'ffigen_app';
            /// The dynamic library in which the symbols for [DuktapeBindings] can be found.
            final DynamicLibrary _dylib = () {
              if (Platform.isMacOS || Platform.isIOS) {
           +    if (Platform.environment.containsKey('FLUTTER_TEST')) {
           +      return DynamicLibrary.open(
-          +          'build/macos/Build/Products/Debug/$_libName/$_libName.framework/$_libName');
+          +        'build/macos/Build/Products/Debug/$_libName/$_libName.framework/$_libName',
+          +      );
           +    }
                return DynamicLibrary.open('$_libName.framework/$_libName');
              }
              if (Platform.isAndroid || Platform.isLinux) {
           +    if (Platform.environment.containsKey('FLUTTER_TEST')) {
           +      return DynamicLibrary.open(
-          +          'build/linux/x64/debug/bundle/lib/lib$_libName.so');
+          +        'build/linux/x64/debug/bundle/lib/lib$_libName.so',
+          +      );
           +    }
                return DynamicLibrary.open('lib$_libName.so');
              }
              if (Platform.isWindows) {
           +    if (Platform.environment.containsKey('FLUTTER_TEST')) {
           +      return switch (Abi.current()) {
-          +        Abi.windowsArm64 => DynamicLibrary.open(p.canonicalize(
-          +            p.join(r'build\windows\arm64\runner\Debug', '$_libName.dll'))),
-          +        Abi.windowsX64 => DynamicLibrary.open(p.canonicalize(
-          +            p.join(r'build\windows\x64\runner\Debug', '$_libName.dll'))),
+          +        Abi.windowsArm64 => DynamicLibrary.open(
+          +          p.canonicalize(
+          +            p.join(r'build\windows\arm64\runner\Debug', '$_libName.dll'),
+          +          ),
+          +        ),
+          +        Abi.windowsX64 => DynamicLibrary.open(
+          +          p.canonicalize(
+          +            p.join(r'build\windows\x64\runner\Debug', '$_libName.dll'),
+          +          ),
+          +        ),
           +        _ => throw 'Unsupported platform',
           +      };
           +    }
                return DynamicLibrary.open('$_libName.dll');
              }
              throw UnsupportedError('Unknown platform: ${Platform.operatingSystem}');
-          @@ -33,13 +51,13 @@ class Duktape {
-                   _bindings.duk_create_heap(nullptr, nullptr, nullptr, nullptr, nullptr);
+          @@ -38,13 +64,13 @@ class Duktape {
+               );
              }
            
           -  void evalString(String jsCode) {
@@ -490,12 +501,12 @@ steps:
                var nativeUtf8 = jsCode.toNativeUtf8();
           -    _bindings.duk_eval_raw(
           +    final evalResult = _bindings.duk_eval_raw(
-                   ctx,
-                   nativeUtf8.cast<Char>(),
-                   0,
-          @@ -50,10 +68,21 @@ class Duktape {
-                       DUK_COMPILE_STRLEN |
-                       DUK_COMPILE_NOFILENAME);
+                 ctx,
+                 nativeUtf8.cast<Char>(),
+                 0,
+          @@ -56,10 +82,22 @@ class Duktape {
+                     DUK_COMPILE_NOFILENAME,
+               );
                ffi.malloc.free(nativeUtf8);
           +
           +    if (evalResult != 0) {
@@ -510,8 +521,9 @@ steps:
           +  String _retrieveTopOfStackAsString() {
           +    Pointer<Size> outLengthPtr = ffi.calloc<Size>();
           +    final errorStrPtr = _bindings.duk_safe_to_lstring(ctx, -1, outLengthPtr);
-          +    final returnVal =
-          +        errorStrPtr.cast<ffi.Utf8>().toDartString(length: outLengthPtr.value);
+          +    final returnVal = errorStrPtr.cast<ffi.Utf8>().toDartString(
+          +      length: outLengthPtr.value,
+          +    );
           +    ffi.calloc.free(outLengthPtr);
           +    return returnVal;
              }
@@ -539,75 +551,61 @@ steps:
           // Copyright 2017, 2020, 2022 The Flutter team. All rights reserved.
           // Use of this source code is governed by a BSD-style license
           // that can be found in the LICENSE file.
-          
+
           import 'package:ffigen_app/ffigen_app.dart';
           import 'package:flutter/material.dart';
           import 'package:flutter_riverpod/flutter_riverpod.dart';
           import 'package:google_fonts/google_fonts.dart';
-          
+
           import 'duktape_message.dart';
-          
+
           void main() {
             runApp(const ProviderScope(child: DuktapeApp()));
           }
-          
+
           final duktapeMessagesProvider =
               StateNotifierProvider<DuktapeMessageNotifier, List<DuktapeMessage>>((ref) {
-            return DuktapeMessageNotifier(messages: <DuktapeMessage>[]);
-          });
-          
+                return DuktapeMessageNotifier(messages: <DuktapeMessage>[]);
+              });
+
           class DuktapeMessageNotifier extends StateNotifier<List<DuktapeMessage>> {
             DuktapeMessageNotifier({required List<DuktapeMessage> messages})
-                : duktape = Duktape(),
-                  super(messages);
+              : duktape = Duktape(),
+                super(messages);
             final Duktape duktape;
-          
+
             void eval(String code) {
-              state = [
-                DuktapeMessage.evaluate(code),
-                ...state,
-              ];
+              state = [DuktapeMessage.evaluate(code), ...state];
               try {
                 final response = duktape.evalString(code);
-                state = [
-                  DuktapeMessage.response(response),
-                  ...state,
-                ];
+                state = [DuktapeMessage.response(response), ...state];
               } catch (e) {
-                state = [
-                  DuktapeMessage.error('$e'),
-                  ...state,
-                ];
+                state = [DuktapeMessage.error('$e'), ...state];
               }
             }
           }
-          
+
           class DuktapeApp extends StatelessWidget {
             const DuktapeApp({super.key});
-          
+
             @override
             Widget build(BuildContext context) {
-              return const MaterialApp(
-                title: 'Duktape App',
-                home: DuktapeRepl(),
-              );
+              return const MaterialApp(title: 'Duktape App', home: DuktapeRepl());
             }
           }
-          
+
           class DuktapeRepl extends ConsumerStatefulWidget {
-            const DuktapeRepl({
-              super.key,
-            });
-          
+            const DuktapeRepl({super.key});
+
             @override
             ConsumerState<DuktapeRepl> createState() => _DuktapeReplState();
           }
-          
+
           class _DuktapeReplState extends ConsumerState<DuktapeRepl> {
             final _controller = TextEditingController();
             final _focusNode = FocusNode();
             var _isComposing = false;
-          
+
             void _handleSubmitted(String text) {
               _controller.clear();
               setState(() {
@@ -618,7 +616,7 @@ steps:
               });
               _focusNode.requestFocus();
             }
-          
+
             @override
             Widget build(BuildContext context) {
               final messages = ref.watch(duktapeMessagesProvider);
@@ -638,38 +636,45 @@ steps:
                           child: ListView.builder(
                             padding: const EdgeInsets.all(8.0),
                             reverse: true,
-                            itemBuilder: (context, idx) => messages[idx].when(
-                              evaluate: (str) => Padding(
-                                padding: const EdgeInsets.symmetric(vertical: 2),
-                                child: Text(
-                                  '> $str',
-                                  style: GoogleFonts.firaCode(
-                                    textStyle: Theme.of(context).textTheme.titleMedium,
-                                  ),
+                            itemBuilder:
+                                (context, idx) => messages[idx].when(
+                                  evaluate:
+                                      (str) => Padding(
+                                        padding: const EdgeInsets.symmetric(vertical: 2),
+                                        child: Text(
+                                          '> $str',
+                                          style: GoogleFonts.firaCode(
+                                            textStyle:
+                                                Theme.of(context).textTheme.titleMedium,
+                                          ),
+                                        ),
+                                      ),
+                                  response:
+                                      (str) => Padding(
+                                        padding: const EdgeInsets.symmetric(vertical: 2),
+                                        child: Text(
+                                          '= $str',
+                                          style: GoogleFonts.firaCode(
+                                            textStyle:
+                                                Theme.of(context).textTheme.titleMedium,
+                                            color: Colors.blue[800],
+                                          ),
+                                        ),
+                                      ),
+                                  error:
+                                      (str) => Padding(
+                                        padding: const EdgeInsets.symmetric(vertical: 2),
+                                        child: Text(
+                                          str,
+                                          style: GoogleFonts.firaCode(
+                                            textStyle:
+                                                Theme.of(context).textTheme.titleSmall,
+                                            color: Colors.red[800],
+                                            fontWeight: FontWeight.bold,
+                                          ),
+                                        ),
+                                      ),
                                 ),
-                              ),
-                              response: (str) => Padding(
-                                padding: const EdgeInsets.symmetric(vertical: 2),
-                                child: Text(
-                                  '= $str',
-                                  style: GoogleFonts.firaCode(
-                                    textStyle: Theme.of(context).textTheme.titleMedium,
-                                    color: Colors.blue[800],
-                                  ),
-                                ),
-                              ),
-                              error: (str) => Padding(
-                                padding: const EdgeInsets.symmetric(vertical: 2),
-                                child: Text(
-                                  str,
-                                  style: GoogleFonts.firaCode(
-                                    textStyle: Theme.of(context).textTheme.titleSmall,
-                                    color: Colors.red[800],
-                                    fontWeight: FontWeight.bold,
-                                  ),
-                                ),
-                              ),
-                            ),
                             itemCount: messages.length,
                           ),
                         ),
@@ -687,7 +692,7 @@ steps:
                 ),
               );
             }
-          
+
             Widget _buildTextComposer() {
               return IconTheme(
                 data: IconThemeData(color: Theme.of(context).colorScheme.secondary),
@@ -700,9 +705,7 @@ steps:
                       Flexible(
                         child: TextField(
                           controller: _controller,
-                          decoration: const InputDecoration(
-                            border: InputBorder.none,
-                          ),
+                          decoration: const InputDecoration(border: InputBorder.none),
                           onChanged: (text) {
                             setState(() {
                               _isComposing = text.isNotEmpty;
@@ -716,9 +719,10 @@ steps:
                         margin: const EdgeInsets.symmetric(horizontal: 4.0),
                         child: IconButton(
                           icon: const Icon(Icons.send),
-                          onPressed: _isComposing
-                              ? () => _handleSubmitted(_controller.text)
-                              : null,
+                          onPressed:
+                              _isComposing
+                                  ? () => _handleSubmitted(_controller.text)
+                                  : null,
                         ),
                       ),
                     ],
@@ -801,6 +805,9 @@ steps:
       - name: build runner
         path: ffigen_app/example
         dart: run build_runner build --delete-conflicting-outputs
+      - name: format duktape_message
+        path: ffigen_app/example
+        dart: format lib/duktape_message.freezed.dart
       - name: dart analyze
         path: ffigen_app
         dart: analyze --fatal-infos
